<resources>
    <string name="app_name" translatable="false">R Chat</string>
    <string name="greeting_default_text">Welcome to R Chat!</string>
    <string name="authorization_text">Authorization</string>
    <string name="required_text">Required</string>
    <string name="e_mail_text" translatable="false">E-mail</string>
    <string name="password_text">Password</string>
    <string name="registration_text">Registration</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="incorrect_email_text">Incorrect e-mail</string>
    <string name="short_password_text">Short password</string>
    <string name="login_text">Login</string>
    <string name="public_id_text">Public ID</string>
    <string name="repeat_password_text">Repeat password</string>
    <string name="already_have_account_text">Already have account?</string>
    <string name="hello_text">Hello</string>
    <string name="registration_confirm_text">Registration confirming</string>
    <string name="verification_code_text">Verification code</string>
    <string name="didnt_get_verification_code_text">Didn\'t get verification code?</string>
    <string name="enter_verification_code_text">Enter verification code sent to your e-mail</string>
    <string name="cancel_text">Cancel</string>
    <string name="password_recovery_text">Password Recovery</string>
    <string name="email_password_newpassword_text">Enter your e-mail used in registration, new password and repeat it</string>
    <string name="new_password_text">New password</string>
    <string name="you_text">You: </string>
    <string name="enter_message_text">Enter message</string>
    <string name="send_text">Send</string>
    <string name="new_chat_menu_text">New private chat</string>
    <string name="new_group_chat_menu_text">New group chat</string>
    <string name="search_user_hint">User\'s login or e-mail</string>
    <string name="wip_text">Work in progress</string>
    <string name="ok_text">Ok</string>
    <string name="error_text">Error</string>
    <string name="additional_data_text">Additional data</string>
    <string name="phone_number_text">Phone number</string>
    <string name="continue_text">Continue</string>
    <string name="skip_you_can_set_it_later_in_app_settings_text">Skip (you can set it later in app settings)</string>
    <string name="select_image_to_set_it_as_profile_photo_text">Select image to set it as profile photo</string>
    <string name="internal_server_error_text">Internal server error</string>
    <string name="user_already_exists_text">User already exists with these data</string>
    <string name="access_forbidden_text">Access forbidden</string>
    <string name="wrong_auth_data_text">Wrong data for authorization</string>
    <string name="unexpected_error_text">Unexpected error</string>
    <string name="users_not_found_text">Users not found!</string>
    <string name="successfully_authorized_text">You successfully authorized!</string>
</resources>