<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/registration_confirm_text"
        android:textColor="?attr/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvExplanation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:paddingHorizontal="30dp"
        android:text="@string/enter_verification_code_text"
        android:textColor="?attr/textColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tilVerificationCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilVerificationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        app:boxBackgroundMode="filled"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:layout_constraintBottom_toTopOf="@id/tvNoVerificationCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExplanation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/verification_code_text"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:textColorHint="?attr/hintColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvNoVerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="30dp"
        android:text="@string/didnt_get_verification_code_text"
        android:textColor="?attr/clickableTextColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilVerificationCode" />
</androidx.constraintlayout.widget.ConstraintLayout>