<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".windows.authorization.AuthWindow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:text="@string/authorization_text"
            android:textColor="?attr/textColor"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/tilEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"
            app:boxBackgroundMode="filled"
            app:helperText="@string/required_text"
            app:helperTextTextColor="?attr/helperColor"
            app:layout_constraintBottom_toTopOf="@id/tilPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAuth">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="emailAddress"
                android:hint="@string/e_mail_text"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="?attr/hintColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"
            app:boxBackgroundMode="filled"
            app:helperText="@string/required_text"
            app:helperTextTextColor="?attr/helperColor"
            app:layout_constraintBottom_toTopOf="@id/btnAuthorize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="?attr/hintColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAuthorize"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/btn_background"
            android:clickable="true"
            android:enabled="false"
            android:focusable="true"
            android:text="@string/authorization_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/btnRegistration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword" />

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/btn_background"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/registration_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tvForgotPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAuthorize" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/forgot_password_text"
            android:textColor="?attr/clickableTextColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRegistration" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>