<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".windows.registration.RegisterWindow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/registration_text"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/lTextSize"
            app:layout_constraintBottom_toTopOf="@id/tilFirstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:boxBackgroundMode="filled"
            app:helperText="@string/required_text"
            app:helperTextTextColor="?attr/helperColor"
            app:layout_constraintBottom_toTopOf="@id/tilEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRegistration">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="First Name"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="?attr/hintColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:boxBackgroundMode="filled"
            app:helperText="@string/required_text"
            app:helperTextTextColor="?attr/helperColor"
            app:layout_constraintBottom_toTopOf="@id/tilPublicID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="emailAddress"
                android:background="@android:color/transparent"
                android:hint="@string/e_mail_text"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="?attr/hintColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPublicID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:boxBackgroundMode="filled"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:helperText="@string/required_text"
            app:helperTextTextColor="?attr/helperColor"
            app:layout_constraintBottom_toTopOf="@id/tilPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPublicID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/public_id_text"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:textColorHint="?attr/hintColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:boxBackgroundMode="filled"
            app:counterEnabled="true"
            app:counterMaxLength="60"
            app:helperText="@string/required_text"
            app:helperTextTextColor="?attr/helperColor"
            app:layout_constraintBottom_toTopOf="@id/tilRepeatPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPublicID"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:maxLength="60"
                android:maxLines="1"
                android:textColorHint="?attr/hintColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:boxBackgroundMode="filled"
            app:counterEnabled="true"
            app:counterMaxLength="60"
            app:helperText="@string/required_text"
            app:helperTextTextColor="?attr/helperColor"
            app:layout_constraintBottom_toTopOf="@id/btnRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/repeat_password_text"
                android:inputType="textPassword"
                android:maxLength="60"
                android:maxLines="1"
                android:textColorHint="?attr/hintColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:clickable="true"
            android:enabled="false"
            android:focusable="true"
            android:text="@string/registration_text"
            android:textSize="@dimen/sTextSize"
            app:layout_constraintBottom_toTopOf="@id/tvAlreadyHaveAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilRepeatPassword" />

        <TextView
            android:id="@+id/tvAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/already_have_account_text"
            android:textColor="?attr/clickableTextColor"
            android:textSize="@dimen/sTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRegister" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>